--- a/styles1.css
+++ b/styles1.css
@@ -2,101 +2,165 @@ main{
     display:grid;
     grid-template-areas: 
       "header header "
-      "nav article"
+      "nav contenedor1"
+      "nav contenedor2"
+      "nav contenedor3"
       "footer footer";
     grid-template-columns: 1fr 2fr; 
+    width:1000px;
+    height:600px;
     
     
   }
 
 header{
 border:2px solid black;
-background-color:rgba(137, 10, 10, 0.48);
+background-color:rgba(227, 46, 46, 0.48);
 text-align:center;
 grid-area:header;
 font-size:25px;
+border-radius: 10px;
 }
 
 
 footer{
 border:2px solid black;
 text-align:center;
-background-color:rgba(39, 1, 1, 0.48);
+background-color:rgba(148, 229, 253, 0.48);
 font-size:25px;
 grid-area:footer;
+border-radius: 10px;
 }
 
 nav{
 border:2px solid black;
+border-radius: 25px;
 text-align:center;
-background-color:rgba(39, 1, 1, 0.48);
+background-color:rgba(174, 254, 169, 0.48);
 font-size:25px;
 grid-area:nav;
+margin:5%;
+
+
+display:flex;
+flex-direction:column;
+align-items:center;
+padding-top: 50%;
+
 }
 
-article{
+.button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 18px;
+    margin: 4px 2px;
+    cursor: pointer;
+    
+    width: 50%; 
 
-grid-area:article;
+    border-radius: 40px;
+    
+    margin: 5%;
+}
+
+.button:hover {
+    background-color: #4CAF50; /* Green */
+    color: rgb(0, 0, 0);
+}
+
+.contenedor1{
+grid-area:contenedor1;
 text-align:center;
 display:grid;
     grid-template-areas: 
-      "imagen1 imagen1 imagen2 "
-      "imagen3 imagen4 imagen5" 
-      "imagen6 imagen7 imagen7";
-    grid-template-columns: 1fr 1fr 1fr; 
-    
+      "imagen1 imagen2";
+    grid-template-columns: 1fr 1fr;     
 }
+
+.contenedor2{
+grid-area:contenedor2;
+text-align:center;
+display:grid;
+    grid-template-areas: 
+        "imagen3 imagen4 imagen5";
+    grid-template-columns: 1fr 1fr 1fr;     
+}
+
+.contenedor3{
+    grid-area:contenedor3;
+    text-align:center;
+    display:grid;
+        grid-template-areas: 
+          "imagen6 imagen7";
+        grid-template-columns: 1fr 1fr;     
+    }
+
+
 
 .imagen1{
     
     grid-area:imagen1;
-
-  
-  
+    margin:2%;
 }
 
-.imagen3:hover {
-    transform: scale(3); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-  }
+
 
 .imagen2{
     
     grid-area:imagen2;
+    margin:2%;
 }
 
 .imagen3{
     
     grid-area:imagen3;
-    transition: transform .2s; /* Animation */
+    margin:2%;
+    
 }
 
 .imagen4{
     
     
     grid-area:imagen4;
+    margin:2%;
 }
 
 .imagen5{
     
     
     grid-area:imagen5;
+    margin:2%;
 }
 
 .imagen6{
    
     
     grid-area:imagen6;
+    margin:2%;
 }
 
 .imagen7{
     
     grid-area:imagen7;
+    margin:2%;
 }
 
 img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit:contain;
+
+    transition: transform .2s; /* Animation */
+    
   }
     
+
+img:hover {
+    transform: scale(2.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  }  
 
